// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/render renders the right description for a comment 1`] = `
<span>
  <a
    class="link_1cmobhd"
    href="https://github.com/sourcecred-test/example-github/pull/5#discussion_r171460198"
    rel="nofollow noopener"
    target="_blank"
  >
    comment
  </a>
   on 
  <span>
    <a
      class="link_1cmobhd"
      href="https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899"
      rel="nofollow noopener"
      target="_blank"
    >
      review
    </a>
     on 
    <span>
      <a
        class="link_1cmobhd"
        href="https://github.com/sourcecred-test/example-github/pull/5"
        rel="nofollow noopener"
        target="_blank"
      >
        #5
      </a>
       
      <span>
        (
        <span
          style="color:green"
        >
          +1
        </span>
        /
        <span
          style="color:red"
        >
          −0
        </span>
        )
      </span>
      : This pull request will be more contentious. I can feel it...
    </span>
  </span>
</span>
`;

exports[`plugins/github/render renders the right description for a commit 1`] = `
<span>
  <a
    class="link_1cmobhd"
    href="https://github.com/sourcecred-test/example-github/commit/0a223346b4e6dec0127b1e6aa892c4ee0424b66a"
    rel="nofollow noopener"
    target="_blank"
  >
    0a22334
  </a>
</span>
`;

exports[`plugins/github/render renders the right description for a issue 1`] = `
<span>
  <a
    class="link_1cmobhd"
    href="https://github.com/sourcecred-test/example-github/issues/2"
    rel="nofollow noopener"
    target="_blank"
  >
    #2
  </a>
  : A referencing issue.
</span>
`;

exports[`plugins/github/render renders the right description for a pull 1`] = `
<span>
  <a
    class="link_1cmobhd"
    href="https://github.com/sourcecred-test/example-github/pull/5"
    rel="nofollow noopener"
    target="_blank"
  >
    #5
  </a>
   
  <span>
    (
    <span
      style="color:green"
    >
      +1
    </span>
    /
    <span
      style="color:red"
    >
      −0
    </span>
    )
  </span>
  : This pull request will be more contentious. I can feel it...
</span>
`;

exports[`plugins/github/render renders the right description for a repo 1`] = `
<a
  class="link_1cmobhd"
  href="https://github.com/sourcecred-test/example-github"
  rel="nofollow noopener"
  target="_blank"
>
  sourcecred-test/example-github
</a>
`;

exports[`plugins/github/render renders the right description for a review 1`] = `
<span>
  <a
    class="link_1cmobhd"
    href="https://github.com/sourcecred-test/example-github/pull/5#pullrequestreview-100313899"
    rel="nofollow noopener"
    target="_blank"
  >
    review
  </a>
   on 
  <span>
    <a
      class="link_1cmobhd"
      href="https://github.com/sourcecred-test/example-github/pull/5"
      rel="nofollow noopener"
      target="_blank"
    >
      #5
    </a>
     
    <span>
      (
      <span
        style="color:green"
      >
        +1
      </span>
      /
      <span
        style="color:red"
      >
        −0
      </span>
      )
    </span>
    : This pull request will be more contentious. I can feel it...
  </span>
</span>
`;

exports[`plugins/github/render renders the right description for a userlike 1`] = `
<a
  class="link_1cmobhd"
  href="https://github.com/wchargin"
  rel="nofollow noopener"
  target="_blank"
>
  @wchargin
</a>
`;
